# pymdown-include

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
pymdown_include/: __init__.py
pymdown_include/unit_tests/: rec.md  sections.md  test_basic.py  test_include_copy.py  test_include_indent.py  test_one_line.py  test_rec.py  test_sections.py  test_sections_nest.py  test_sections_nest2.py
scripts/: build.sh
tests/: test_basic.py  test_indent.py  test_rec.py  test_sections.py
